objects/psa_psc_tpn_default__c.object
<CustomObject>
    <fields>
        <fullName>Psa_TPN_3D__c</fullName>
        <label>Default Psa TPN 3D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Psa_TPN__c</fullName>
        <label>Psa TPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Psc_TPN_3D__c</fullName>
        <label>Default Psc TPN 3D</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Psc_TPN__c</fullName>
        <label>Psc TPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>psa psc target process node default</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Psa_TPN_3D__c</columns>
        <columns>Psc_TPN_3D__c</columns>
        <columns>Psa_TPN__c</columns>
        <columns>Psc_TPN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>psa psc target process node default Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>psa psc target process node defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>